--- a/application.yml
+++ b/application.yml
@@ -11,3 +11,11 @@ mongo:
 spring:
   profiles:
     active: dev
+    
+eureka:
+  host: localhost
+  port: 8761
+  
+config:
+  host: localhost
+  port: 8888
