--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,4 +1,16 @@
-mydata=dev
-people.name=lyf
-people.age=24
-people.address=beijing
+mongo:
+  host: 10.100.82.225
+  port: 27017
+  dbname: madpdemo
+  
+spring:
+  profiles:
+    active: dev
+    
+eureka:
+  host: localhost
+  port: 8761
+  
+config:
+  host: localhost
+  port: 8888
