--- a/gateway.yml
+++ b/gateway.yml
@@ -1,10 +1,42 @@
+
+server:
+  port: 10000
+
+sidecar:
+  port: 8000
+
+
+endpoints:
+  restart:
+    enabled: true
+  shutdown:
+    enabled: true
+  health:
+    sensitive: false
+
+#将API网关服务注册到eureka
+eureka:
+  instance:
+    hostname: gateway
+    prefer-ip-address: true
+    metadata-map:
+      instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+#      defaultZone: http://10.122.12.239:8761/eureka/,http://10.122.12.238:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
+
+
+
 #Zuul是一个基于JVM的路由器，同时也是一个服务端负载均衡。
 zuul:
   routes:
   #用户模块路由配置(当请求的URL匹配到相应的路由规则，就将该请求转发到serviceId所对应的服务，
   #对应service的相关信息在注册服务器中可以拿到)
     user:
-      path: /user-service/**
+      path: /user/**
       serviceId: user
 
   #音乐模块路由配置
@@ -28,3 +60,5 @@ zuul:
     config:
       path: /config/**
       serviceId: config
+
+
