--- a/gateway.yml
+++ b/gateway.yml
@@ -45,4 +45,7 @@ zuul:
       path: /config/**
       serviceId: config
 
-
+  #配置服务模块
+    signLeave:
+      path: /signLeave/api/oa/mobile/service/**
+      serviceId: signLeave
